--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Software Engineer Joseph P. Pasaoa's portfolio site"
-      content="Web site created using create-react-app"
+      name="description"
+      content="Software Engineer & Developer Joseph P. Pasaoa's portfolio site"
     />
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Amiri:700|Cabin|Crimson+Text:700|Marcellus+SC|Raleway&display=swap" rel="stylesheet">
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Joseph P. Pasaoa, Developer</title>
+    <title>Joseph P. Pasaoa, Software Engineer & Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
