--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Software Engineer & Developer Joseph P. Pasaoa's portfolio site"
+      content="Software Engineer & Full-stack Developer Joseph P. Pasaoa's portfolio site"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Joseph P. Pasaoa, Software Engineer & Developer</title>
+    <title>Joseph P. Pasaoa | Software Engineer & Full-Stack Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
